# CHIP-8-emulator

./: .gitignore  CMakeLists.txt  LICENSE  README.md  emu.cpp
programs/: IBM.8o
src/: 8oLoader.cpp  emu.cpp
src/components/: components.cpp  components.hpp
src/cpu/: cpu.cpp  cpu.hpp
src/instructions/: instructions.cpp  instructions.hpp
